# streamlit-MS

./: Model1.py  Model2.py  Model3.py  Model4.py  README.md  main.py  pyproject.toml
script/: homepage.py  model1.py  multipage.py  template.py
